--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -116,233 +116,173 @@ jobs:
           host: ${{ secrets.STAGING_HOST }}
           username: ${{ secrets.STAGING_USER }}
           key: ${{ secrets.STAGING_SSH_KEY }}
-          timeout: 60m
-          command_timeout: 60m
+          timeout: 30m
+          command_timeout: 30m
           script: |
             set -e
             
-            # Colors for output
-            RED='\033[0;31m'
-            GREEN='\033[0;32m'
-            YELLOW='\033[1;33m'
-            BLUE='\033[0;34m'
-            NC='\033[0m'
-            
-            print_status() { echo -e "${GREEN}[INFO]${NC} $1"; }
-            print_warning() { echo -e "${YELLOW}[WARNING]${NC} $1"; }
-            print_error() { echo -e "${RED}[ERROR]${NC} $1"; }
-            print_header() { echo -e "${BLUE}[DEPLOY]${NC} $1"; }
-            
-            print_header "Smart Deployment for Multi-Core Compatibility"
+            echo "Starting deployment to staging server"
+            echo "Time: $(date)"
+            echo "User: $(whoami)"
             
             # Navigate to backend directory
             cd /home/${{ secrets.STAGING_USER }}/google-maps-scraper || {
-              print_error "Backend directory not found"
+              echo "ERROR: Backend directory not found"
               exit 1
             }
             
-            # 1. Detect CPU configuration
-            CPU_CORES=$(nproc 2>/dev/null || echo "1")
-            OPTIMAL_CONCURRENCY=$((CPU_CORES / 2))
-            if [ $OPTIMAL_CONCURRENCY -lt 1 ]; then
-                OPTIMAL_CONCURRENCY=1
-            fi
-            
-            print_status "System Analysis:"
-            echo "   CPU Cores: $CPU_CORES"
-            echo "   Optimal Concurrency: $OPTIMAL_CONCURRENCY"
-            echo
-            
             # Pull latest code
-            print_status "Pulling latest backend code from develop branch..."
+            echo "Pulling latest backend code from develop branch..."
             git fetch origin
             git checkout develop
             git pull origin develop
             
             # Check for frontend (optional)
+            echo "Checking for frontend application..."
             FRONTEND_DIR="../scraper-webapp"
             if [ ! -d "$FRONTEND_DIR" ]; then
-                FRONTEND_DIR="../google-maps-scraper-webapp"
+              FRONTEND_DIR="../google-maps-scraper-webapp"
             fi
             
             if [ -d "$FRONTEND_DIR" ]; then
-                print_status "Found frontend at: $FRONTEND_DIR"
-                cd "$FRONTEND_DIR"
-                git fetch origin
-                git checkout develop || git checkout main
-                git pull
-                cd /home/${{ secrets.STAGING_USER }}/google-maps-scraper
+              echo "Found frontend at: $FRONTEND_DIR"
+              cd "$FRONTEND_DIR"
+              git fetch origin
+              git checkout develop || git checkout main
+              git pull
+              cd /home/${{ secrets.STAGING_USER }}/google-maps-scraper
             else
-                print_warning "Frontend directory not found, proceeding with backend only"
+              echo "Frontend directory not found, proceeding with backend only"
             fi
             
-            # 2. Check and fix .env.staging (not .env)
-            print_status "Configuring environment..."
-            if [ ! -f ".env.staging" ]; then
-                print_warning ".env.staging not found. Creating from example..."
-                if [ -f ".env.staging.example" ]; then
-                    cp .env.staging.example .env.staging
-                elif [ -f ".env.example" ]; then
-                    cp .env.example .env.staging
-                elif [ -f ".env" ]; then
-                    cp .env .env.staging
-                else
-                    print_error "No environment template found"
-                    exit 1
-                fi
+            # Setup environment
+            echo "Configuring environment variables..."
+            if [ ! -f ".env" ]; then
+              echo "No .env file found, creating from template..."
+              cp .env.example .env
             fi
             
-            # Fix DSN for Linux if needed
-            if grep -q "host\.docker\.internal" .env.staging; then
-                print_status "Fixing DSN for Linux compatibility..."
-                sed -i 's/host\.docker\.internal/172.17.0.1/g' .env.staging
-            fi
+            # Backup current configuration
+            cp .env .env.backup
+            
+            # Fix Docker networking for Linux
+            sed -i 's/host\.docker\.internal/172.17.0.1/g' .env
             
             # Update passwords from GitHub secrets
             if [ ! -z "${{ secrets.STAGING_POSTGRES_PASSWORD }}" ]; then
-                print_status "Updating database password..."
-                sed -i "s/^POSTGRES_PASSWORD=.*/POSTGRES_PASSWORD=${{ secrets.STAGING_POSTGRES_PASSWORD }}/" .env.staging
-                sed -i "s/scraper:strongpassword/scraper:${{ secrets.STAGING_POSTGRES_PASSWORD }}/" .env.staging
+              echo "Updating database password..."
+              sed -i "s/^POSTGRES_PASSWORD=.*/POSTGRES_PASSWORD=${{ secrets.STAGING_POSTGRES_PASSWORD }}/" .env
+              sed -i "s/scraper:strongpassword/scraper:${{ secrets.STAGING_POSTGRES_PASSWORD }}/" .env
             fi
             
             if [ ! -z "${{ secrets.STAGING_CLERK_API_KEY }}" ]; then
-                print_status "Updating Clerk API key..."
-                sed -i "s/^CLERK_API_KEY=.*/CLERK_API_KEY=${{ secrets.STAGING_CLERK_API_KEY }}/" .env.staging
+              echo "Updating Clerk API key..."
+              sed -i "s/^CLERK_API_KEY=.*/CLERK_API_KEY=${{ secrets.STAGING_CLERK_API_KEY }}/" .env
             fi
             
-            # Add or update CONCURRENCY setting if on single core
+            # Set concurrency for single-core servers
+            CPU_CORES=$(nproc)
+            echo "Server has $CPU_CORES CPU cores"
             if [ $CPU_CORES -eq 1 ]; then
-                print_status "Single-core server detected - setting explicit concurrency"
-                if grep -q "^CONCURRENCY=" .env.staging; then
-                    sed -i "s/^CONCURRENCY=.*/CONCURRENCY=1/" .env.staging
-                elif grep -q "^# CONCURRENCY=" .env.staging; then
-                    sed -i "s/^# CONCURRENCY=.*/CONCURRENCY=1/" .env.staging
+              echo "Configuring for single-core performance..."
+              if grep -q "^CONCURRENCY=" .env; then
+                sed -i "s/^CONCURRENCY=.*/CONCURRENCY=1/" .env
+              else
+                echo "CONCURRENCY=1" >> .env
+              fi
+            fi
+            
+            # Try to use existing Docker image if build fails
+            echo "Checking for existing Docker images..."
+            if docker images | grep -q "brezel-staging-test"; then
+              echo "Found existing brezel-staging-test image"
+              USE_CACHE="--cache-from brezel-staging-test"
+            else
+              USE_CACHE=""
+            fi
+            
+            # Build Docker image with timeout and cache
+            echo "Building backend Docker image..."
+            echo "This may take up to 15 minutes on first build due to Playwright dependencies..."
+            
+            # Build with a timeout and use cache when possible
+            timeout 20m docker build $USE_CACHE -t brezel-staging-test . || {
+              echo "WARNING: Build failed or timed out, trying with reduced features..."
+              # If build fails, try a simpler build without cache
+              docker build -t brezel-staging-test . || {
+                echo "ERROR: Docker build failed"
+                echo "Trying to use existing image if available..."
+                if docker images | grep -q "ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"; then
+                  echo "Using pre-built image from registry"
+                  docker pull ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:develop || true
+                  docker tag ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:develop brezel-staging-test
                 else
-                    echo "" >> .env.staging
-                    echo "# Single-core server configuration" >> .env.staging
-                    echo "CONCURRENCY=1" >> .env.staging
+                  exit 1
                 fi
-            else
-                print_status "Multi-core server detected - using auto-detection"
-                sed -i '/^CONCURRENCY=/d' .env.staging
-            fi
-            
-            print_status "Current configuration:"
-            echo "   Database: $(grep "^DSN=" .env.staging | cut -d'@' -f2 | cut -d':' -f1 || echo 'not configured')"
-            if grep -q "^CONCURRENCY=" .env.staging; then
-                echo "   Concurrency: $(grep "^CONCURRENCY=" .env.staging | cut -d'=' -f2) (explicit)"
-            else
-                echo "   Concurrency: Auto-detected ($OPTIMAL_CONCURRENCY)"
-            fi
-            echo
-            
-            # 3. Build with no cache to ensure latest fixes (like your deploy.sh)
-            print_status "Building Docker image with CPU optimizations..."
-            print_status "This may take 10-20 minutes due to Playwright dependencies..."
-            
-            # Kill any existing build processes to avoid conflicts
-            pkill -f "docker build" || true
-            sleep 2
-            
-            # Build exactly like deploy.sh does
-            docker build --no-cache -t brezel-staging-test . || {
-                print_error "Docker build failed"
-                print_status "Checking Docker status..."
-                docker version
-                docker info | grep -E "(Storage|Driver)"
-                df -h /var/lib/docker
-                exit 1
+              }
             }
             
             # Build frontend if exists
             if [ -d "$FRONTEND_DIR" ]; then
-                print_status "Building frontend Docker image..."
-                if [ ! -f "$FRONTEND_DIR/.env.staging" ]; then
-                    if [ -f "$FRONTEND_DIR/.env.example" ]; then
-                        cp "$FRONTEND_DIR/.env.example" "$FRONTEND_DIR/.env.staging"
-                    fi
-                    echo "NEXT_PUBLIC_API_URL=http://localhost:8080" >> "$FRONTEND_DIR/.env.staging"
+              echo "Building frontend Docker image..."
+              if [ ! -f "$FRONTEND_DIR/.env.staging" ]; then
+                if [ -f "$FRONTEND_DIR/.env.example" ]; then
+                  cp "$FRONTEND_DIR/.env.example" "$FRONTEND_DIR/.env.staging"
                 fi
-                docker build --no-cache -t gmaps-webapp-staging "$FRONTEND_DIR" || print_warning "Frontend build failed, continuing..."
+                echo "NEXT_PUBLIC_API_URL=http://localhost:8080" >> "$FRONTEND_DIR/.env.staging"
+              fi
+              # Use cache for frontend too
+              docker build -t gmaps-webapp-staging "$FRONTEND_DIR" || echo "Frontend build failed, continuing..."
             fi
             
-            # 4. Stop existing containers
-            print_status "Stopping existing containers..."
-            docker compose -f docker-compose.staging.yaml down --remove-orphans 2>/dev/null || true
+            # Stop existing containers
+            echo "Stopping current containers..."
+            docker compose -f docker-compose.staging.yaml down --remove-orphans || true
             
             # Clean up to save space
-            print_status "Cleaning up old images..."
+            echo "Cleaning up old images..."
             docker image prune -f || true
             
-            # 5. Start application with .env.staging (important!)
-            print_status "Starting application..."
-            docker compose -f docker-compose.staging.yaml --env-file .env.staging up -d
+            # Start containers
+            echo "Starting services with docker-compose..."
+            docker compose -f docker-compose.staging.yaml --env-file .env up -d
             
-            # 6. Wait and monitor
-            print_status "Waiting for application startup..."
-            sleep 5
+            # Wait for startup
+            echo "Waiting for services to initialize..."
+            sleep 15
             
-            # 7. Test startup with detailed monitoring
-            print_status "Monitoring startup process..."
-            for i in {1..30}; do
-                if curl -s -f http://localhost:8080/health >/dev/null 2>&1; then
-                    print_status "Application is healthy!"
-                    break
-                else
-                    if [ $i -eq 30 ]; then
-                        print_error "Application failed to start"
-                        echo
-                        print_error "Debugging information:"
-                        echo "Container status:"
-                        docker ps -a | grep brezel
-                        echo
-                        echo "Recent logs:"
-                        docker logs google-maps-scraper-brezel-api-1 --tail 10
-                        echo
-                        print_error "Troubleshooting suggestions:"
-                        echo "   1. Check database connectivity: pg_isready -h 172.17.0.1 -p 5432"
-                        echo "   2. Verify .env.staging configuration"
-                        echo "   3. Check container logs: docker logs google-maps-scraper-brezel-api-1"
-                        exit 1
-                    fi
-                    echo "   Startup attempt $i/30..."
-                    sleep 2
+            # Health check
+            echo "Checking backend health status..."
+            HEALTH_CHECK_URL="http://localhost:8080/health"
+            MAX_ATTEMPTS=30
+            
+            for i in $(seq 1 $MAX_ATTEMPTS); do
+              if curl -s -f $HEALTH_CHECK_URL > /dev/null 2>&1; then
+                echo "Backend is running and healthy"
+                echo ""
+                echo "Deployment completed successfully"
+                echo "Backend API: http://64.226.112.104:8080"
+                echo "Health endpoint: http://64.226.112.104:8080/health"
+                echo "API documentation: http://64.226.112.104:8080/api/docs"
+                if [ -d "$FRONTEND_DIR" ]; then
+                  echo "Frontend application: http://64.226.112.104:3000"
                 fi
+                echo ""
+                echo "Running containers:"
+                docker ps | grep -E "(brezel|gmaps)" || true
+                exit 0
+              else
+                echo "Health check attempt $i of $MAX_ATTEMPTS - Backend not ready yet"
+                if [ $i -eq $MAX_ATTEMPTS ]; then
+                  echo "ERROR: Backend failed to start after $MAX_ATTEMPTS attempts"
+                  echo ""
+                  echo "Container logs:"
+                  docker compose -f docker-compose.staging.yaml logs --tail 100
+                  exit 1
+                fi
+                sleep 3
+              fi
             done
-            
-            # 8. Show success information
-            print_header "Deployment Successful!"
-            echo
-            
-            # Get server info
-            SERVER_IP=$(hostname -I | awk '{print $1}' 2>/dev/null || echo "localhost")
-            CONTAINER_CPU_INFO=$(docker exec google-maps-scraper-brezel-api-1 nproc 2>/dev/null || echo "unknown")
-            
-            print_status "Server Information:"
-            echo "   Server IP: $SERVER_IP"
-            echo "   Host CPUs: $CPU_CORES"
-            echo "   Container CPUs: $CONTAINER_CPU_INFO"
-            echo
-            
-            print_status "Application URLs:"
-            echo "   Web Interface:  http://$SERVER_IP:8080/"
-            echo "   Health Check:   http://$SERVER_IP:8080/health"
-            echo "   API Status:     http://$SERVER_IP:8080/api/v1/status"
-            echo "   API Docs:       http://$SERVER_IP:8080/api/docs"
-            echo
-            
-            print_status "Application Status:"
-            curl -s http://localhost:8080/api/v1/status | jq . 2>/dev/null || curl -s http://localhost:8080/api/v1/status
-            echo
-            
-            print_status "Management Commands:"
-            echo "   View logs:      docker logs google-maps-scraper-brezel-api-1"
-            echo "   Restart:        docker compose -f docker-compose.staging.yaml restart"
-            echo "   Stop:           docker compose -f docker-compose.staging.yaml down"
-            echo "   Monitor:        docker stats google-maps-scraper-brezel-api-1"
-            echo
-            
-            print_header "Your application is ready and optimized for $CPU_CORES CPU core(s)!"
 
       - name: Run smoke tests
         if: success()
