--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -53,14 +53,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Fix Go version in Dockerfile
-        run: |
-          # No changes needed - Dockerfile already uses Go 1.24
-          echo "Dockerfile Go version:"
-          grep "FROM golang" Dockerfile
-          echo "go.mod version:"
-          grep "^go " go.mod
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -90,19 +82,76 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: |
+            type=gha
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
+          cache-to: |
+            type=gha,mode=max
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
           platforms: linux/amd64
           build-args: |
             BUILD_DATE=${{ github.event.head_commit.timestamp }}
             GIT_COMMIT=${{ github.sha }}
             VERSION=${{ github.ref_name }}
 
+  build-frontend:
+    name: Build and Push Frontend Image
+    needs: [test]
+    runs-on: ubuntu-latest
+    if: |
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && 
+      (github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true))
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check if frontend exists
+        id: check-frontend
+        run: |
+          if [ -d "../scraper-webapp" ] || [ -d "../google-maps-scraper-webapp" ]; then
+            echo "frontend_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "frontend_exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Checkout frontend repo
+        if: steps.check-frontend.outputs.frontend_exists == 'true'
+        uses: actions/checkout@v4
+        with:
+          repository: yasseen-salama/google-maps-scraper-webapp  # Update with your frontend repo
+          path: frontend
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        if: steps.check-frontend.outputs.frontend_exists == 'true'
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Container Registry
+        if: steps.check-frontend.outputs.frontend_exists == 'true'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Frontend Docker image
+        if: steps.check-frontend.outputs.frontend_exists == 'true'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:staging
+            ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
+
   deploy-staging:
     name: Deploy to Staging Environment
-    needs: [build-and-push]
+    needs: [build-and-push, build-frontend]
+    if: always() && needs.build-and-push.result == 'success' && github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop'
     environment:
       name: staging
       url: http://64.226.112.104:8080
@@ -192,47 +241,24 @@ jobs:
               fi
             fi
             
-            # Try to use existing Docker image if build fails
-            echo "Checking for existing Docker images..."
-            if docker images | grep -q "brezel-staging-test"; then
-              echo "Found existing brezel-staging-test image"
-              USE_CACHE="--cache-from brezel-staging-test"
-            else
-              USE_CACHE=""
-            fi
+            # Login to GitHub Container Registry
+            echo "Logging in to GitHub Container Registry..."
+            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             
-            # Build Docker image with timeout and cache
-            echo "Building backend Docker image..."
-            echo "This may take up to 15 minutes on first build due to Playwright dependencies..."
-            
-            # Build with a timeout and use cache when possible
-            timeout 20m docker build $USE_CACHE -t brezel-staging-test . || {
-              echo "WARNING: Build failed or timed out, trying with reduced features..."
-              # If build fails, try a simpler build without cache
-              docker build -t brezel-staging-test . || {
-                echo "ERROR: Docker build failed"
-                echo "Trying to use existing image if available..."
-                if docker images | grep -q "ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"; then
-                  echo "Using pre-built image from registry"
-                  docker pull ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:develop || true
-                  docker tag ghcr.io/${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:develop brezel-staging-test
-                else
-                  exit 1
-                fi
-              }
+            # Pull the pre-built images
+            echo "Pulling pre-built Docker images..."
+            docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:staging || {
+              echo "ERROR: Failed to pull backend staging image"
+              exit 1
             }
             
-            # Build frontend if exists
+            # Pull frontend image if it exists
             if [ -d "$FRONTEND_DIR" ]; then
-              echo "Building frontend Docker image..."
-              if [ ! -f "$FRONTEND_DIR/.env.staging" ]; then
-                if [ -f "$FRONTEND_DIR/.env.example" ]; then
-                  cp "$FRONTEND_DIR/.env.example" "$FRONTEND_DIR/.env.staging"
-                fi
-                echo "NEXT_PUBLIC_API_URL=http://localhost:8080" >> "$FRONTEND_DIR/.env.staging"
-              fi
-              # Use cache for frontend too
-              docker build -t gmaps-webapp-staging "$FRONTEND_DIR" || echo "Frontend build failed, continuing..."
+              echo "Pulling frontend image..."
+              docker pull ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:staging || {
+                echo "WARNING: Failed to pull frontend image, will build locally"
+                docker build -t gmaps-webapp-staging "$FRONTEND_DIR"
+              }
             fi
             
             # Stop existing containers
@@ -243,7 +269,7 @@ jobs:
             echo "Cleaning up old images..."
             docker image prune -f || true
             
-            # Start containers
+            # Start containers with the new images
             echo "Starting services with docker-compose..."
             docker compose -f docker-compose.staging.yaml --env-file .env up -d
             
